--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 #quote.service=http://localhost:8080/random
+spring.application.name=quote-ui
 spring.cloud.config.uri=${config.server:http://localhost:8888}
 server.port=8889
